# fireworks-and-air-quality

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: fireworks_causal_inference.ipynb
scripts/: build_notebooks.py
src/: __init__.py  aqs_client.py  panel_builder.py  weather_client.py
utils/: __init__.py  plotting.py  stats_helpers.py
