[project]
name = "fireworks-air-quality"
version = "0.1.0"
description = "Causal inference pipeline measuring July 4th backyard fireworks PM2.5 spikes — Synthetic DiD + DoubleML tutorial"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # --- Core data stack ---
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",        # parquet I/O
    "scipy>=1.13",

    # --- Data acquisition ---
    "requests>=2.31",
    "python-dotenv>=1.0",
    "meteostat>=1.6",       # NOAA weather via Meteostat
    "tqdm>=4.66",

    # --- Causal inference ---
    "doubleml>=0.8",
    "diff-diff>=0.3",       # Synthetic DiD + TWFE + Callaway-Sant'Anna

    # --- ML learners for DoubleML nuisance ---
    "lightgbm>=4.3",
    "scikit-learn>=1.5",

    # --- Visualization ---
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",

    # --- Notebook environment ---
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "nbstripout>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "utils"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
    "nbstripout>=0.7",
]
